--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -48,11 +48,14 @@
       "Publish",
       "Pdf"
     ]
-  }, 
+  },
   "need_generate_pdf_url_template": true,
   "targets": {
     "pdf": {
       "template_folder": "_themes.pdf"
     }
+  },
+  "docs_build_engine": {
+    "name": "docfx_v3"
   }
 }
