--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -41,7 +41,9 @@
     - name: MSIX Core
       items:
         - name: Overview
-          href: msix-core/msixcore.md 
+          href: msix-core/msixcore.md
+        - name: Update your existing MSIX to support MSIX Core
+          href: msix-core/support-msix-core.md
         - name: Deploy an MSIX package with MSIX Core
           href: msix-core/deploy-with-msix-core.md
         - name: Creating MSIX package with MSIX Core from source code
