--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -42,13 +42,13 @@
       items:
         - name: Overview
           href: msix-core/msixcore.md
-        - name: Update your existing MSIX to support MSIX Core
+        - name: Update your MSIX package to support MSIX Core
           href: msix-core/support-msix-core.md
         - name: Deploy an MSIX package with MSIX Core
           href: msix-core/deploy-with-msix-core.md
-        - name: Creating MSIX package with MSIX Core from source code
+        - name: Create an MSIX package with MSIX Core from source code
           href: msix-core/msixcore-clickonce-solution.md
-        - name: Troubleshooting tips
+        - name: Troubleshooting
           href: msix-core/msixcore-troubleshoot.md
     - name: Group policy and MSIX packaged apps
       href: group-policy-msix.md
