--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -38,8 +38,10 @@
       items: 
         - name: Overview
           href: app-package-updates.md
-        - name: Store only developer package updates
+        - name: Updating Store distributed apps programmatically
           href: store-developer-package-update.md
+        - name: Updating non-Store Distributed apps programmatically
+          href: non-store-developer_updates.md
     - name: MSIX support on 1709 and 1803
       href: msix-1709-and-1803-support.md
     - name: MSIX Core
