--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -38,9 +38,9 @@
       items: 
         - name: Overview
           href: app-package-updates.md
-        - name: Updating Store distributed apps programmatically
+        - name: Updating Store apps from your code
           href: store-developer-package-update.md
-        - name: Updating non-Store Distributed apps programmatically
+        - name: Updating non-Store apps from your code
           href: non-store-developer_updates.md
     - name: MSIX support on 1709 and 1803
       href: msix-1709-and-1803-support.md
