--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -262,7 +262,7 @@
       href: https://docs.microsoft.com/windows/uwp/debug-test-perf/device-portal?context=/windows/msix/render
     - name: Debug and test a packaged app
       items:
-        - name: Overview
+        - name: Run, debug, and test a packaged desktop application
           href: desktop/desktop-to-uwp-debug.md
         - name: Test for Windows 10 in S mode
           href: desktop/desktop-to-uwp-test-windows-s.md
