--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -62,30 +62,27 @@
           href: https://docs.microsoft.com/uwp/schemas/appinstallerschema/app-installer-file?context=/windows/msix/render
     - name: Get started
       items: 
-        - name: Overview 
-          href:
-        - name: MSIX SDK
+        - name: Overview
+          href: get-started.md
+        - name: MSIX videos
+          href: team-video.md
+    - name: MSIX SDK
+      items: 
+        - name: Overview
+          href: msix-sdk/sdk-overview.md
+        - name: Use the MSIX SDK to distribute an MSIX package
+          href: msix-sdk/sdk-guidance.md
+        - name: Release notes
           items: 
-            - name: Overview
-              href: msix-sdk/sdk-overview.md
-            - name: Use the MSIX SDK to distribute an MSIX package
-              href: msix-sdk/sdk-guidance.md
-            - name: Release notes
-              items: 
-                - name: MSIX SDK Release 1.4
-                  href: msix-sdk/release-notes/sdk-release-notes-1.4.md
-                - name: MSIX SDK Release 1.5
-                  href: msix-sdk/release-notes/sdk-release-notes-1.5.md
-                - name: MSIX SDK Release 1.6
-                  href: msix-sdk/release-notes/sdk-release-notes-1.6.md
-                - name: MSIX SDK Release 1.7
-                  href: msix-sdk/release-notes/sdk-release-notes-1.7.md
-            - name: MSIX hands-on-labs 
-              href: 
-            - name: MSIX Toolkit
-              href:
-            - name: MSIX videos
-              href: team-video.md
+            - name: MSIX SDK Release 1.4
+              href: msix-sdk/release-notes/sdk-release-notes-1.4.md
+            - name: MSIX SDK Release 1.5
+              href: msix-sdk/release-notes/sdk-release-notes-1.5.md
+            - name: MSIX SDK Release 1.6
+              href: msix-sdk/release-notes/sdk-release-notes-1.6.md
+            - name: MSIX SDK Release 1.7
+              href: msix-sdk/release-notes/sdk-release-notes-1.7.md
+
 - name: Create an MSIX package from an existing installer
   items: 
     - name: Overview
