Draft of MSIX deployment

--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -188,8 +188,9 @@
   items: 
     - name: Overview
       items: 
-        - name: Know your customer
-          href: 
+          href: desktop\Managing-your-MSIX-deployment-Overview.md
+        - name: Know your target devices
+          href: desktop\Managing-your-MSIX-deployment-Overview.md#Know your target devices 
         - name: MSIX service support
           href: 
         - name: MSIX native support
