--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -188,9 +188,8 @@
   items: 
     - name: Overview
       items: 
-          href: desktop\Managing-your-MSIX-deployment-Overview.md
-        - name: Know your target devices
-          href: desktop\Managing-your-MSIX-deployment-Overview.md?context=Know your target devices 
+        - name: Know your customer
+          href: 
         - name: MSIX service support
           href: 
         - name: MSIX native support
